--- a/src/lib/styles/index.css
+++ b/src/lib/styles/index.css
@@ -5,4 +5,7 @@ body {
   font-style: normal;
   font-variation-settings:
     "wdth" 100;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
